<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.example.rober.dailylifehelper.Settings.SettingsFragment"
        android:title="@string/prefs_header_notifications"
        android:summary="@string/prefs_header_notifications_summary"
        android:icon="@android:drawable/ic_delete">
        <extra
            android:name="settings"
            android:value="notifications" />
    </header>
    <header
        android:fragment="com.example.rober.dailylifehelper.Settings.SettingsFragment"
        android:title="@string/prefs_header_gps"
        android:summary="@string/prefs_header_gps_summary"
        android:icon="@android:drawable/ic_delete">
        <extra
            android:name="settings"
            android:value="gps" />
    </header>
</preference-headers>
