<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/recipeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/recipeIngredientsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/ingredients"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/amount"/>

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/unit"/>

        <TextView
            android:id="@+id/ingredientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/ingredientname"/>

    </LinearLayout>

    <TextView
        android:id="@+id/recipeStepsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/steps"/>

    <TextView
        android:id="@+id/recipeSteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>